[package]
name = "inps"
version = "0.1.0"
authors = ["Micah Chambers <micahc.vt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.138"
sendfd = "0.4.3"

[[example]]
name = "pinger"
test = false
bench = false
